src/less/footer.less
.page-footer {
  border-top: 1px solid @gray-border;
  padding: 12px 0 24px;

  .footer-row {
    display: flex;
    justify-content: space-between;

    ul {
      list-style-type: none;
      margin: 0;
      padding: 0;
    }

    li {
      display: inline-block;

      &:first-child a {
        padding-left: 0;
      }

      &:last-child a {
        padding-right: 0;
      }

      a {
        padding: 3px 6px;
        .social-media-icons();
      }
    }
  }

  .copyright {
    text-align: center;
    border-top: 1px solid @gray-border;
    margin: 12px 0 0;
    padding: 24px 0 0;
  }

  .last-updated {
    text-align: center;
    margin: 0;
    font-size: 12px;
  }
}

